# project/routes/users.js
@@ -3,6 +3,8 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const users_utils = require("./utils/users_utils");
 const players_utils = require("./utils/players_utils");
+const matches_utils = require("./utils/matches_utils");
+
 
 /**
  * Authenticate all incoming requests by middleware
@@ -25,12 +27,12 @@ router.use(async function (req, res, next) {
 /**
  * This path gets body with playerId and save this player in the favorites list of the logged-in user
  */
-router.post("/favoritePlayers", async (req, res, next) => {
+router.post("/favoritematches", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
-    const player_id = req.body.playerId;
-    await users_utils.markPlayerAsFavorite(user_id, player_id);
-    res.status(201).send("The player successfully saved as favorite");
+    const match_id = req.body.match_id;
+    await users_utils.markMatchAsFavorite(user_id, match_id);
+    res.status(201).send("The match successfully saved as favorite");
   } catch (error) {
     next(error);
   }
@@ -39,14 +41,14 @@ router.post("/favoritePlayers", async (req, res, next) => {
 /**
  * This path returns the favorites players that were saved by the logged-in user
  */
-router.get("/favoritePlayers", async (req, res, next) => {
+router.get("/favoritematches", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
-    let favorite_players = {};
-    const player_ids = await users_utils.getFavoritePlayers(user_id);
-    let player_ids_array = [];
-    player_ids.map((element) => player_ids_array.push(element.player_id)); //extracting the players ids into array
-    const results = await players_utils.getPlayersInfo(player_ids_array);
+    let favorite_matches = {};
+    const match_ids = await users_utils.getFavoriteMatches(user_id);
+    let match_ids_array = [];
+    match_ids.map((element) => match_ids_array.push(element.match_id)); //extracting the matches ids into array
+    const results = await matches_utils.getFavoritsGames(match_ids_array);
     res.status(200).send(results);
   } catch (error) {
     next(error);
